--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,28 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/csfin
-spring.datasource.username=root
-spring.datasource.password=root
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/csfin
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 
 spring.jpa.hibernate.ddl-auto=update
 
 
 spring.jpa.show-sql=true
+
+
+
+twilio.sid=${TWILIO_SID}
+twilio.key=${TWILIO_KEY}
+twilio.phone.from=${TWILIO_PHONE_FROM}
+twilio.phone.to=${TWILIO_PHONE_TO}
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
